Add improvements